--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style="width:800px; margin:0 auto;">
+<div style="margin:0 auto;">
 <h1><span style="color: #546e7a;">Welcome to Jason Guo's GitHub page.</span></h1>
 <p><span style="color: #546e7a;">I am a high school student who codes for fun.</span></p>
 <p><span style="color: #546e7a;">My main project as of late 2017 is&nbsp;<a href="https://github.com/erfz/chem-tool">ChemTool</a>, which I intend on releasing on the Google Play Store.</span></p>
