--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<div style="width: 50%; margin: 0 auto;">
-<h1><span style="color: #546e7a;">Welcome to Jason Guo's GitHub page.</span></h1>
-<p><span style="color: #546e7a;">I am a high school student who codes for fun.</span></p>
-<p><span style="color: #546e7a;">My main project as of late 2017 is&nbsp;<a href="https://github.com/erfz/chem-tool">ChemTool</a>, which I intend on releasing to the Google Play Store.</span></p>
-<p><span style="color: #546e7a;">For any inquiries, email me at <a href="mailto:jguo35@live.com" target="_top">jguo35@live.com</a>.</span></p>
+<style>
+.content {
+    max-width: 500px;
+    margin: auto;
+}
+</style>
+<body>
+
+<div class="content">
+  <h1><span style="color: #546e7a;">Welcome to Jason Guo's GitHub page.</span></h1>
+  <p><span style="color: #546e7a;">I am a high school student who codes for fun.</span></p>
+  <p><span style="color: #546e7a;">My main project as of late 2017 is&nbsp;<a href="https://github.com/erfz/chem-tool">ChemTool</a>, which I intend on releasing to the Google Play Store.</span></p>
+  <p><span style="color: #546e7a;">For any inquiries, email me at <a href="mailto:jguo35@live.com" target="_top">jguo35@live.com</a>.</span></p>
 </div>
+
+</body>
